# traffic_simulaor

./: LICENSE  LICENSE.md  NOTICE.md  README.md  pyproject.toml
src/traffic_simulator/: __init__.py  main.py  simulation.py  widgets.py
