[project]
name = "traffic-simulator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nagomu_Shimamura@Jetson", email = "e3nagomu@gmail.com" }
]
dependencies = [
    "pyside6>=6.8.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/traffic_simulator"]
